# djotdown

./: package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
backend/: .gitignore  Cargo.toml  Shuttle.toml
backend/.sqlx/: query-2ed3f83b6e7bf713c32c8aedf2b6e3dfca4f1d3b2aea26ce25c2bbbed82c4602.json  query-775a0c72e8fef0b4335bd02ad2c622aef9d5dc29d803151f292b2172ef2ca8f3.json
backend/migrations/: 20230918024132_djots.sql
backend/src/: main.rs
public/: bamboo.css  custom.css  tailwind-typography.css
src/: config.json  djot-reference.djot
src/components/: Preview.tsx
src/lib/: render.ts
src/pages/: index.tsx
