[package]
name = "static-next-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["fs"] }
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres", "postgres-rustls"] }
shuttle-static-folder = "0.25.0"
tokio = "1.32.0"
sqlx = "0.7.1"
uuid7 = "0.7.1"
