[package]
name = "static-next-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres", "postgres-rustls"] }
shuttle-static-folder = "0.25.0"
axum = "0.6.20"
axum-macros = "0.3.8"
tower-http = { version = "0.4.4", features = ["fs"] }
tower = { version = "0.4.13", features = ["util"] }
tokio = "1.32.0"
sqlx = { version = "0.7.1", features = ["macros", "uuid"] }
uuid7 = { version = "0.7.1", features = ["uuid"] }
